--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.3</version>
+		<version>3.3.5</version>
 	</parent>
 
 	<groupId>org.springframework.samples</groupId>
@@ -50,8 +50,8 @@
 									<additionalProperties>
 										<encoding.source>${project.build.sourceEncoding}</encoding.source>
 										<encoding.reporting>${project.reporting.outputEncoding}</encoding.reporting>
-										<java.source>${maven.compiler.source}</java.source>
-										<java.target>${maven.compiler.target}</java.target>
+										<java.source>17</java.source>
+										<java.target>17</java.target>
 									</additionalProperties>
 								</configuration>
 							</execution>
@@ -74,8 +74,7 @@
 							<verbose>true</verbose>
 							<dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
 							<generateGitPropertiesFile>true</generateGitPropertiesFile>
-							<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
-							</generateGitPropertiesFilename>
+							<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
 							<failOnNoGitDirectory>false</failOnNoGitDirectory>
 						</configuration>
 					</plugin>
